# vscode_bazel_swiftui_example

./: .bazelrc  .gitignore  .swiftlint.yml  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE
app/: BUILD.bazel  Info.plist
app/Sources/: ContentView.swift  MainApp.swift
modules/: BUILD.bazel
modules/DemoModule/: BUILD.bazel
modules/DemoModule/Sources/: DemoModule.swift
modules/DemoModule/Tests/: DemoModuleTests.swift
spm/: BUILD.bazel  Package.resolved  Package.swift  deps_index.json
tools/: extensions.bzl  repositories.bzl  shared.bzl
tools/netrc_credential_helper/: netrc_credential_helper.py
